<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="display_title">Job Comparison App</string>
    <string name="current_job_button">Edit Current Job</string>
    <string name="job_offer_button">Enter Job Offer</string>
    <string name="comparison_settings_button">Comparison Settings</string>
    <string name="reset_application_button">Reset Application</string>
    <string name="compare_jobs_button">Compare Jobs</string>
    <string name="enter_job_title">Job Title:</string>
    <string name="enter_company">Company:</string>
    <string name="enter_city">City:</string>
    <string name="enter_state">State:</string>
    <string name="enter_location">Location:</string>
    <string name="enter_cost_of_living">Cost of Living Index:</string>
    <string name="enter_remote_work">Remote Work Days:</string>
    <string name="enter_annual_salary">Annual Salary:</string>
    <string name="enter_annual_bonus">Annual Bonus:</string>
    <string name="enter_retirement_benefits">Retirement Benefits:</string>
    <string name="enter_leave_time">Leave Time:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="enter_comparison_title">Comparison Weights</string>
    <string name="enter_remote_weight">Remote Days Weight:</string>
    <string name="enter_salary_weight">Salary Weight:</string>
    <string name="enter_bonus_weight">Bonus Weight:</string>
    <string name="enter_benefit_weight">Benefit Weight:</string>
    <string name="enter_leave_weight">Leave Weight:</string>
    <string name="update_weight_button">Update Weights</string>
    <string name="current_job_app_title">Current Job</string>
    <string name="job_offer_app_title">Job Offer</string>
    <string name="compare_rank_button">Compare</string>
    <string name="first_job_label">Job #1</string>
    <string name="second_job_label">Job #2</string>
    <string name="return_button">Return</string>
    <string name="job_another_offer_button">Enter Another Job Offer</string>

    <string-array name="remote_selection_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="weight_selection_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
